# macro-invest-agent-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  claude-identity.md  docker-compose.prod.yml  docker-compose.yml  fix_imports.py  pyproject.toml
.github/workflows/: backend-cd.yml  ci.yml  daily-ingest.yml  regen-uv-lock-oneoff.yml  release.yml
apps/api/: Dockerfile  dependencies.py  main.py  startup_seeder.py
apps/api/dto/: builders.py  fundamentals.py  quant.py  scenarios.py
apps/api/routers/: alerts.py  events.py  explanations.py  fundamentals.py  quant.py  regimes.py  scenarios.py  signals.py  snapshots.py  stream.py
apps/frontend/: .env.local.example  Dockerfile  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/login/: page.tsx
apps/frontend/components/: AlephDashboard.tsx  DetailPanel.tsx  ResearchPanel.tsx  ServiceWorkerRegister.tsx
apps/frontend/components/layout/: AlphaPanel.tsx  StatusBar.tsx  StatusBarLazy.tsx
apps/frontend/components/panels/: CommandTerminal.tsx  LiveChart.tsx  NetworkCanvas.tsx  RiskMatrix.tsx  WorldMap.tsx
apps/frontend/hooks/: useAlephData.ts  useAlephStream.ts  useAuth.ts  useMarketStream.ts  useNewsStream.ts  useNewsSummary.ts  useOmniStream.ts  usePushNotifications.ts
apps/frontend/lib/: api.ts  types.ts  utils.ts
apps/frontend/lib/supabase/: client.ts  server.ts
apps/frontend/public/: manifest.json  sw.js
apps/frontend/public/aleph-one/: index.html  styles.css
docs/: ARCHITECTURE.md  architecture_overview.md  current_state.md  roadmap.md
scripts/: backtest_regime_eval.py  vps-setup.sh
src/: adapters.py  config.py  database.py  engines.py  main.py
src/agent/: mcp_adapter.py  schemas.py  service.py
src/agent/adapters/repositories/: in_memory_alert_store.py  in_memory_event_store.py  in_memory_explanation_store.py  in_memory_feature_store.py  in_memory_macro_regime_store.py  in_memory_macro_snapshot_store.py  supabase_feature_store.py
src/agent/adapters/sources/: __init__.py  fixture_macro_data_source.py  in_memory_macro_data_source.py  (+1 more)
src/agent/context/: __init__.py  store.py  trimming.py
src/agent/formatting/: comparison.py  summaries.py
src/agent/runtime/: __init__.py  agent_runtime.py  langchain_runtime.py  output_validation.py  tools.py
src/core/config/: settings.py
src/core/contracts/: macro_data_source.py  macro_regime_repository.py  macro_snapshot_repository.py
src/core/exceptions/: base.py
src/core/logging/: logger.py  timing.py
src/core/metrics/: __init__.py
src/core/schemas/: common.py
src/core/tracing/: __init__.py  tracer.py
src/database/: connection.py  init_db.py  seed.py
src/domain/alerts/: rule_engine.py  rules.py
src/domain/attribution/: attribution_engine.py  models.py
src/domain/events/: impact.py  models.py  normalizer.py
src/domain/macro/: __init__.py  change_detection.py  comparison.py  enums.py  history.py  models.py  narrative_builder.py  regime.py  regime_mapping.py  regime_transition.py  snapshot.py
src/domain/notifications/: __init__.py  models.py  service.py
src/domain/quant/: scoring.py
src/domain/risk/: __init__.py  engine.py  models.py
src/domain/signals/: __init__.py  engine.py  models.py  regime_signal_rules.py  registry.py  rules.py
src/domain/synthesis/: __init__.py  engine.py  models.py
src/domain/whatif/: __init__.py  engine.py  models.py
src/pipelines/ingestion/: indicator_catalog.py  ingestion_jobs.py  macro_ingestion_service.py  models.py  multi_source_ingest.py
src/services/: __init__.py  event_impact_adapter.py  interfaces.py  macro_regime_service.py  macro_service.py  macro_snapshot_service.py  quant_scoring_service.py  signal_service.py
tests/adapters/: test_source_registry.py
tests/core/: test_common_schemas.py  test_exceptions.py  test_logger.py  test_logging.py  test_settings.py  test_tracing.py
tests/evals/: conftest.py
tests/evals/comparison/: test_comparison_happy.py  test_comparison_no_change.py  test_comparison_prior_missing.py  test_degraded_comparison.py
tests/evals/multi_turn/: test_bounded_turns.py  test_context_carryover.py  test_context_isolation.py  test_degraded_turn.py
tests/evals/prompt_regression/: test_context_hint_isolation.py  test_prompt_drift.py  test_prompt_templates.py
tests/evals/provider_failure/: test_fred_failure.py  test_partial_data.py  test_stale_data.py  test_timeout.py  test_typed_failures.py
tests/evals/schema_conformance/: test_failure_category_schema.py  test_request_schemas.py  test_response_schemas.py
tests/evals/tracing/: test_trace_id_propagation.py
tests/unit/: test_macro_service_with_source.py
tests/unit/adapters/: test_historical_data.py  test_in_memory_list_recent.py  test_macro_enrichment.py  test_market_adapters.py  test_virtual_broker_v2.py
tests/unit/agent/: test_agent_service.py  test_comparison_formatting.py  test_comparison_runtime.py  test_comparison_service.py  test_context_models.py  test_context_store.py  test_context_trimming.py  test_formatting.py  test_langchain_runtime.py  test_output_validation.py  test_prompt_templates.py  test_runtime.py  test_schemas.py
tests/unit/api/: test_alerts_router.py  test_compare_with_delta.py  test_contract.py  test_dto_builders_explanation.py  test_events_router.py  test_explanation_repository.py  test_explanations_router.py  test_product_surface_contract.py  test_quant_router.py  test_regimes_history.py  test_regimes_router.py  test_signals_router.py  test_snapshots_router.py  test_startup_seeder.py  test_trust_dto.py
tests/unit/domain/: test_alert_rule_engine.py
tests/unit/pipelines/: test_fred_normalizer.py  test_fred_source.py  test_ingestion.py  test_phase1_foundation.py
tests/unit/services/: test_in_memory_macro_regime_store.py  test_macro_regime_end_to_end.py  test_macro_regime_service.py  test_macro_service.py  test_macro_snapshot_service.py  test_signal_service.py
watchdog/: .env.watchdog.example  requirements.txt  watchdog.py  watchdog.service
(+78 files in other folders)
