[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macro-invest-agent-platform"
version = "0.4.14"
description = "Modular backend and data pipeline platform for macro investment agent systems"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "prefect>=3.7.1",
    "streamlit>=1.57.0",
    "structlog>=25.5.0",
    "langchain-core>=1.0.0",
    "langchain>=1.0.0",
    "langchain-groq>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "pymilvus>=2.4.0",
    "milvus-lite>=2.4.0",
    "pytz>=2024.1",
    "langgraph>=1.0.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "prometheus-client>=0.25.0",
    "yfinance>=1.3.0",
    "sse-starlette>=3.4.4",
    "httpx>=0.28.1",
    "cryptography>=42.0.0",
    "sentry-sdk[fastapi]>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
    "types-requests>=2.32.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -ra -q"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "numpy", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langchain", "langchain.*", "langchain_core", "langchain_core.*", "langchain_groq", "langchain_groq.*", "langchain_ollama", "langchain_ollama.*", "langgraph", "langgraph.*", "sentence_transformers", "sentence_transformers.*", "pymilvus", "pymilvus.*", "pytz", "pytz.*", "psycopg2", "psycopg2.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
    "N",   # pep8-naming
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults (FastAPI Depends/Query pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["macro_invest_agent_platform"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.hatch.build.targets.wheel]
packages = ["apps", "src"]

[tool.coverage.run]
source = ["src", "apps"]
omit = ["tests/*", "src/database.py", "src/engines.py", "src/main.py"]

[tool.coverage.report]
skip_empty = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]
